# Bar-Chart-Race

./: .gitignore  README.md  index.html  preparation_dataset.ipynb  pyproject.toml
staticfolder/: dataset.js  graph.css  graph.js  graph_init.js  graphresponsive.css  world_map.js
